[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
wasm-bindgen = "0.2"
sim = { path = "../sim" }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5" 

genetic-algorithm = { path = "../genetic-algorithm" }
neural-network = { path = "../neural-network" }

[lib]
crate-type = ["cdylib"]