[package]
name = "sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.26", features = ["rand-no-std"] }
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
approx = "0.4"

genetic-algorithm = { path = "../genetic-algorithm" }
neural-network = { path = "../neural-network" }

[dev-dependencies]
test-case = "1.0"